--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "basic-auth": "^2.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dialogflow": "^1.2.0",
     "dialogflow-fulfillment": "^0.6.1",
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
